<?xml version="1.0"?>
<package>
  <name>tiny-dnn</name>
  <version>0.0.0</version>
  <description>A tiny package for deep neural network: see AUTHORS for full list</description>

  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>  
  <author email="noumi.taiga@gmail.com">multiple authors</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
